LearningPlanDTO modified based on requirement