@@ -4,11 +4,13 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
 import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 
+import com.thbs.lms.dto.CourseDTO;
 import com.thbs.lms.dto.LearningPlanDTO;
 import com.thbs.lms.dto.PathDTO;
 
@@ -20,12 +22,9 @@ class LearningPlanDTOTest {
         // Sample data
         Long batchId = 123L;
         Long learningPlanId = 456L;
-        List<PathDTO> path = Arrays.asList(new PathDTO(1L, "type1"), new PathDTO(2L, "type2"));
-        List<Long> courseIds = List.of(101L, 102L, 103L);
-        List<List<Long>> topicIds = List.of(
-                List.of(201L, 202L),
-                List.of(203L, 204L),
-                List.of(205L, 206L));
+        List<PathDTO> path = Arrays.asList(
+                new PathDTO(1L, "type1", "trainer1", new Date(), new Date(), new CourseDTO()),
+                new PathDTO(2L, "type2", "trainer2", new Date(), new Date(), new CourseDTO()));
 
         // Create a LearningPlanDTO object
         LearningPlanDTO learningPlanDTO = new LearningPlanDTO();
@@ -34,15 +33,11 @@ class LearningPlanDTOTest {
         learningPlanDTO.setBatchId(batchId);
         learningPlanDTO.setLearningPlanId(learningPlanId);
         learningPlanDTO.setPath(path);
-        learningPlanDTO.setCourseIds(courseIds);
-        learningPlanDTO.setTopicIds(topicIds);
 
         // Test getters
         assertEquals(batchId, learningPlanDTO.getBatchId());
         assertEquals(learningPlanId, learningPlanDTO.getLearningPlanId());
         assertEquals(path, learningPlanDTO.getPath());
-        assertEquals(courseIds, learningPlanDTO.getCourseIds());
-        assertEquals(topicIds, learningPlanDTO.getTopicIds());
     }
 
     @Test
@@ -50,22 +45,15 @@ class LearningPlanDTOTest {
         // Sample data for constructor
         Long batchId = 123L;
         Long learningPlanId = 456L;
-        List<PathDTO> path = Arrays.asList(new PathDTO(1L, "type1"), new PathDTO(2L, "type2"));
-        List<Long> courseIds = List.of(101L, 102L, 103L);
-        List<List<Long>> topicIds = List.of(
-                List.of(201L, 202L),
-                List.of(203L, 204L),
-                List.of(205L, 206L));
+        List<PathDTO> path = Arrays.asList(new PathDTO(), new PathDTO());
 
         // Create a LearningPlanDTO object using AllArgsConstructor
-        LearningPlanDTO learningPlanDTO = new LearningPlanDTO(batchId, learningPlanId, path, courseIds, topicIds);
+        LearningPlanDTO learningPlanDTO = new LearningPlanDTO(batchId, learningPlanId, path);
 
         // Test getters to verify the data set by AllArgsConstructor
         assertEquals(batchId, learningPlanDTO.getBatchId());
         assertEquals(learningPlanId, learningPlanDTO.getLearningPlanId());
         assertEquals(path, learningPlanDTO.getPath());
-        assertEquals(courseIds, learningPlanDTO.getCourseIds());
-        assertEquals(topicIds, learningPlanDTO.getTopicIds());
     }
 
     @Test
@@ -77,7 +65,5 @@ class LearningPlanDTOTest {
         assertNull(learningPlanDTO.getBatchId());
         assertNull(learningPlanDTO.getLearningPlanId());
         assertNull(learningPlanDTO.getPath());
-        assertNull(learningPlanDTO.getCourseIds());
-        assertNull(learningPlanDTO.getTopicIds());
     }
 }
